{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 93,
  "lineage": "128aa450-20b3-57c5-1294-037b0eb70af7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062fcd3ff07176066",
            "arn": "arn:aws:ec2:us-east-1:484123688626:elastic-ip/eipalloc-062fcd3ff07176066",
            "association_id": "eipassoc-074268cdf6b6740db",
            "domain": "vpc",
            "id": "eipalloc-062fcd3ff07176066",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08f649ca3a92354f4",
            "private_dns": "ip-10-0-1-237.ec2.internal",
            "private_ip": "10.0.1.237",
            "public_dns": "ec2-52-22-203-146.compute-1.amazonaws.com",
            "public_ip": "52.22.203.146",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "pubsub-nat-eip"
            },
            "tags_all": {
              "Name": "pubsub-nat-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.pubsub_igw",
            "aws_vpc.pubsub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pubsub_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:internet-gateway/igw-05045b9ce5f4b4713",
            "id": "igw-05045b9ce5f4b4713",
            "owner_id": "484123688626",
            "tags": {
              "Name": "pubsub-igw"
            },
            "tags_all": {
              "Name": "pubsub-igw"
            },
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "dependencies": [
            "aws_vpc.pubsub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062fcd3ff07176066",
            "association_id": "eipassoc-074268cdf6b6740db",
            "connectivity_type": "public",
            "id": "nat-0e0d1f1ff9289b752",
            "network_interface_id": "eni-08f649ca3a92354f4",
            "private_ip": "10.0.1.237",
            "public_ip": "52.22.203.146",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f1bf2ecf8cf4a454",
            "tags": {
              "Name": "pubsub-nat"
            },
            "tags_all": {
              "Name": "pubsub-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pubsub_igw",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:route-table/rtb-0ef33a1f08e4246a5",
            "id": "rtb-0ef33a1f08e4246a5",
            "owner_id": "484123688626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0e0d1f1ff9289b752",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubsub-private-rt"
            },
            "tags_all": {
              "Name": "pubsub-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pubsub_igw",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:route-table/rtb-0a0c00870a9da8c33",
            "id": "rtb-0a0c00870a9da8c33",
            "owner_id": "484123688626",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05045b9ce5f4b4713",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pubsub-public-rt"
            },
            "tags_all": {
              "Name": "pubsub-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.pubsub_igw",
            "aws_vpc.pubsub_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-033bd9039a3c71555",
            "route_table_id": "rtb-0ef33a1f08e4246a5",
            "subnet_id": "subnet-04ce7a13a52bb00b0"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pubsub_igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05ae087cc608ed9ab",
            "route_table_id": "rtb-0ef33a1f08e4246a5",
            "subnet_id": "subnet-02021840f32fc5c69"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.pubsub_igw",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0681b852a1d38753a",
            "route_table_id": "rtb-0a0c00870a9da8c33",
            "subnet_id": "subnet-0f1bf2ecf8cf4a454"
          },
          "dependencies": [
            "aws_internet_gateway.pubsub_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ba0cba91cef03167",
            "route_table_id": "rtb-0a0c00870a9da8c33",
            "subnet_id": "subnet-003628a526383d4ad"
          },
          "dependencies": [
            "aws_internet_gateway.pubsub_igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:subnet/subnet-04ce7a13a52bb00b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04ce7a13a52bb00b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484123688626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub-private-1",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pubsub-private-1",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "dependencies": [
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:subnet/subnet-02021840f32fc5c69",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02021840f32fc5c69",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "484123688626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub-private-2",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "pubsub-private-2",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "dependencies": [
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:subnet/subnet-0f1bf2ecf8cf4a454",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f1bf2ecf8cf4a454",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484123688626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub-public-1",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pubsub-public-1",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "dependencies": [
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:subnet/subnet-003628a526383d4ad",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-003628a526383d4ad",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "484123688626",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "pubsub-public-2",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "pubsub-public-2",
              "kubernetes.io/cluster/pubsub-cluster": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-018aa50c1a8358fe9"
          },
          "dependencies": [
            "aws_vpc.pubsub_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "pubsub_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:484123688626:vpc/vpc-018aa50c1a8358fe9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0159b2fdb638caa7f",
            "default_route_table_id": "rtb-0d7d112389f4aa1e1",
            "default_security_group_id": "sg-0c3c8a6e41e931983",
            "dhcp_options_id": "dopt-07a23793e244bc6fd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-018aa50c1a8358fe9",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d7d112389f4aa1e1",
            "owner_id": "484123688626",
            "tags": {
              "Name": "pubsub-vpc",
              "kubernetes.io/cluster/pubsub-cluster": "shared"
            },
            "tags_all": {
              "Name": "pubsub-vpc",
              "kubernetes.io/cluster/pubsub-cluster": "shared"
            }
          }
        }
      ]
    }
  ]
}